修复因大小写问题导致的图片失效

--- a/存档/总目录.md
+++ b/存档/总目录.md
@@ -1,5 +1,5 @@
 # 存档导航
-+ 标`GH-`的是图集，需要跳到GitHub查看
++ 标`GH-`的是图集，需要跳到GitHub查看。如您的网络并不能直连GitHub，请考虑通过在浏览器地址栏中输入`irminsul-dup.github.io`+`文件路径`的方式访问。
 
 ## 世界树运营
 + [猛干DLC汇报](./世界树运营/猛干DLC/猛干DLC.md)
