重新处理mengan DLC，并对内容做少许调整

--- a/存档/世界树运营/赠仙书.md
+++ b/存档/世界树运营/赠仙书.md
@@ -1,7 +1,7 @@
 # 赠仙书（原名：给仙家军的一封信）
 + 原文转自关站后的[世界树.](https://hoyo.life/3.html)。注意：网站有盲水印。
 
-+ 此处显示套有base64的原文及其转译版。
++ 此处显示套有两层base64的原文及其转译版。
 
 致仙家军们:
 
